[ 05-DEC-2018 ] Fixed compilation errors Displaying all data for wipbins and queues case info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
- <mat-progress-spinner style="margin-top:15%;left: 45%;" *ngIf="isLoading" color="success" mode="indeterminate"></mat-progress-spinner>
+ <mat-progress-spinner style="margin-top:15%;left: 45%;z-index:125;" *ngIf="isLoading" color="success" mode="indeterminate"></mat-progress-spinner>
 
 
 <bbw-header [userInfo]="userInfo"></bbw-header>
