--- a/src/app/modules/case/brass/brass.component.html
+++ b/src/app/modules/case/brass/brass.component.html
@@ -144,4 +144,5 @@
         
   <button class="doneBtn" mat-raised-button color="primary" (click)="changeComp(0)">Done</button>
 </div>
+<mat-progress-spinner style="margin-top:-34%;left: 45%;z-index:125;" *ngIf="isLoading" color="success" mode="indeterminate"></mat-progress-spinner>
 </div>            
