[ 05-DEC-2018 ] Fixed compilation errors Displaying all data for wipbins and queues case info

--- a/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
+++ b/src/app/modules/queues/wipbin-case-list/wipbin-case-list.component.html
@@ -4,7 +4,7 @@
   <div class="planner-dropdown">
   <table class="wipbin-drop">
     <tr>
-    <td class="mat-list"><mat-label>List</mat-label></td>
+    
     <td class="wipdrop-td">
       <mat-form-field class="wipdrop-list">
       <mat-select [(ngModel)]="firsrList">
@@ -12,7 +12,7 @@
         </mat-select>
       </mat-form-field>
     </td>
-  <td><mat-label>whose</mat-label></td>
+  <td><mat-label></mat-label></td>
   </tr>
   </table>
   </div>
