[ 07-DEC-2018 ] Added logout button functionality and to make sure it always redirects to https temp

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,5 +3,5 @@
     <span>Broadband Workflow</span>
     <span class="header-fill-remaining-space"></span>
     <span>{{userInfo?.loginName}} | {{userInfo?.userAttuid}}</span>&nbsp;<i class="icon-oneperson white"></i> 
-    <button mat-button class="white">Logout&nbsp;<i class="small icon-controls-poweronoff white" role="img"></i></button>
+    <button (click)="invalidateSession();" mat-button class="white">Logout&nbsp;<i class="small icon-controls-poweronoff white" role="img"></i></button>
 </mat-toolbar>
