--- a/src/app/modules/case/brass/brass.component.css
+++ b/src/app/modules/case/brass/brass.component.css
@@ -29,20 +29,13 @@ td{
 .responseTable{
   margin-left: 5px;
   width: 99.5%;
-  height: 165px;
+  height: 220px;
   overflow: auto;
   margin-top: -1%;
-  /* border: 1px solid black; */
-
+  border: 1px solid gray;
+  margin-top: 1%;
 }
 
-.supplierTable{
-  margin-left: 5px;
-  width: 99.5%;
-  height: 133px;
-  overflow: auto;
-  /* border: 1px solid black; */
-}
 .grid-item
 {
   width:62%;  
@@ -70,19 +63,26 @@ td{
 .mat-tab-body-content { 
   overflow: none;
 }
-#btn1
+.sirBtn
 {
-margin-left: 7.3%;
+margin-left: 150%;
 color:#ffffff;
 }
+.updateBtn{
+  margin: 2%;
+  margin-left: 115%;
+}
+.addInfoBtn{
+margin-left: 69%;
+}
 .moreWorkingBtn{
-  margin-left: 20%;
+  margin-left: 22%;
 }
 .refreshBtn{
   margin-left: 15%;
 }
 .doneBtn{
-  margin-left: 18%
+  margin-left: 16%
 }
 .table1{
   width:100%;
